[package]
name = "read_chars"
version = "0.2.0"
authors = ["Ashton Snapp <ashton@ashtonsnapp.com>"]
edition = "2021"
description = "An iterator over characters read from some I/O source."
readme = "README.md"
repository = "https://github.com/AshtonSnapp/read_chars"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
